# podrm

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt
.github/workflows/: ci.yaml
components/: CMakeLists.txt
components/databases/: CMakeLists.txt
components/databases/odbc/: CMakeLists.txt
components/databases/odbc/include/podrm/: odbc.hpp
components/databases/odbc/include/podrm/odbc/: cursor.hpp  database.hpp  environment.hpp
components/databases/odbc/include/podrm/odbc/detail/: connection.hpp  cursor.hpp  entry.hpp  result.hpp  row.hpp
components/databases/odbc/lib/: connection.cpp  cursor.cpp  entry.cpp  environment.cpp  error.cpp  error.hpp  result.cpp  row.cpp  string.cpp  string.hpp
components/databases/odbc/test/: CMakeLists.txt  field.hpp  test.cpp
components/databases/postgres/: CMakeLists.txt
components/databases/postgres/lib/: connection.cpp  result.cpp
components/databases/sqlite/: CMakeLists.txt
components/databases/sqlite/include/podrm/: sqlite.hpp
components/databases/sqlite/include/podrm/sqlite/detail/: connection.hpp  cursor.hpp  result.hpp
components/databases/sqlite/lib/: connection.cpp  cursor.cpp
components/databases/sqlite/test/: CMakeLists.txt
components/metadata/: CMakeLists.txt
components/metadata/include/podrm/: metadata.hpp
components/postgres/: CMakeLists.txt
components/postgres/include/podrm/postgres/: database.hpp
components/postgres/include/podrm/postgres/detail/: connection.hpp
components/postgres/lib/: connection.cpp  formatters.hpp
components/reflection/: CMakeLists.txt
components/reflection/include/podrm/: reflection.hpp
components/reflection/include/podrm/reflection/: api.hpp  primary_key.hpp  reflection.hpp  relations.hpp
components/reflection/include/podrm/reflection/detail/: field.hpp  fn_deduction.hpp  member_name.hpp
components/reflection/test/: CMakeLists.txt  comparisons.hpp  field.hpp  nested.cpp  relation.cpp  self_relation.cpp  simple.cpp
components/span/: CMakeLists.txt
components/span/include/podrm/: span.hpp
components/sqlite/: CMakeLists.txt
components/sqlite/include/podrm/sqlite/: database.hpp
components/sqlite/include/podrm/sqlite/detail/: entry.hpp  row.hpp
components/sqlite/lib/: connection.cpp  cursor.cpp  result.cpp  row.cpp
components/sqlite/test/: CMakeLists.txt  test.cpp
components/utils/: CMakeLists.txt
components/utils/multilambda/: CMakeLists.txt
components/utils/multilambda/include/podrm/: multilambda.hpp
components/utils/span/: CMakeLists.txt
data/: macos-odbcinst.ini
include/pfr-orm/: api.hpp  definitions.hpp  operations.hpp  postges-helpers.hpp
include/pfr-orm/detail/: escaping.hpp  field.hpp  member_name.hpp  operations.hpp  pfr.hpp  span.hpp  type_name.hpp
include/pfr-orm/postgres/: operations.hpp  utils.hpp
include/pfr-orm/sqlite/: operations.hpp  utils.hpp
include/pfr-orm/sqlite/detail/: operations.hpp
include/podrm/: api.hpp  definitions.hpp  primary_key.hpp  reflection.hpp  relations.hpp  span.hpp
include/podrm/detail/: concepts.hpp  field.hpp  pfr.hpp  span.hpp  type_name.hpp
include/podrm/postgres/: database.hpp  operations.hpp  utils.hpp
include/podrm/postgres/detail/: connection.hpp  operations.hpp  result.hpp  str.hpp
include/podrm/sqlite/: cursor.hpp  database.hpp  operations.hpp  query.hpp  utils.hpp
include/podrm/sqlite/detail/: connection.hpp  cursor.hpp  operations.hpp  result.hpp
lib/detail/: escaping.cpp  multilambda.hpp  operations.cpp
lib/postgres/: CMakeLists.txt  connection.cpp  formatters.hpp  operations.cpp  str.cpp  utils.cpp
lib/sqlite/: CMakeLists.txt  connection.cpp  cursor.cpp  entry.cpp  operations.cpp  result.cpp  utils.cpp
scripts/: check_format.py  format.py  tidy.py
scripts/common/: project.py
test/: .clang-tidy  CMakeLists.txt  Person.hpp  comparisons.hpp  field.hpp  nested.cpp  relation.cpp  self_relation.cpp  simple.cpp  test.cpp
